[Bug fix] Changed sticky behavior on comment box to only occur over 800px; this should bypass the strange overlapping issues on mobile.

--- a/comments/style-partial-comments.css
+++ b/comments/style-partial-comments.css
@@ -97,6 +97,12 @@
 	margin-top: 1rem;
 	padding-top: 1rem;
 }
+@media(min-width:800px) {
+.comments__left {
+	position: sticky;
+	top: 5rem;
+}
+}
 .commentate__name/*, .commentate__sign-in*/ {
 	flex: 1;
 }
